# dtt

./: .gitignore  CMakeLists.txt  README.md  Using.md
src/: CMakeLists.txt  bookmarkedtasks.cpp  bookmarkedtasks.h  completedtasks.cpp  completedtasks.h  dbmanager.cpp  dbmanager.h  main.cpp  pendingtasks.cpp  pendingtasks.h  resources.qrc  subtask.cpp  subtask.h  subtasklist.cpp  subtasklist.h  task.cpp  task.h  taskmanager.cpp  taskmanager.h  wiptasks.cpp  wiptasks.h
src/resources/: AppControls.qml  CreateTaskPopup.qml  DashboardActionPanel.qml  IPCButton.qml  Main.qml  ProgressGraph.qml  ShowTaskPopup.qml  StatusBar.qml  TaskCard.qml  TaskDescriptionView.qml  TaskList.qml  TaskProgress.qml
